<resources>
    <string name="app_name">Magnetic Scale Speedometer</string>

    <string name="title_activity_about">About</string>
    <string name="app_icon_description">App Icon</string>
    <string name="version_placeholder">Version %s</string> <!-- %s will be replaced by the actual version -->
    <string name="about_page_description"><![CDATA[
    <p>Scale speedometer using an Android phone and two magnets</p>
    <p>This is a free, open-source, app that uses the phone\'s magnetometer sensor to calculate scale speed.</p>
    <p><i>Based on a suggestion by Brendan S.</i></p>
    <h3>Magnets</h3>
    <ul>
        <li>The two magnets should be \'similar\' in size and magnetic properties.</li>
        <li>They should be placed a \'similar\' distance to the left/right \'edge\' of each carriage.</li>
        <li>If too close the app may not recognise that the passing of the first magnet has ended.</li>
        <li>Similarly, the carriage carrying the magnets should not be too close to the loco.</li>
    </ul>
    <h3>Screen</h3>
    <ul>
        <li>Scale - The model train scale to be used for the speed calculation.</ul>
        <li>Distance - Distance between the two magnets in centimeters, measured from leading edge to leading edge.</ul>
        <li>Threshold - The minimum amount above or below the ambient level which the app will register a magnet. Adjust to ignore background \'noise\'.</ul>
        <li>Axis - X, Y or Z.  Which magnetometer sensor axis to use to measure the speed.  Pick the axis that is giving the best responses.</ul>
        <li>Ignore first response - The magnets in the loco\'s motor are likely to trigger the sensor. This option allows you to ignore the first reading (the loco).</ul>
        <li>Restart (sec) - Time in seconds. If this is set at anything above zero, the values will automatically clear X seconds after the last successful reading.  Note that This does not reset the ambient values. </ul>
        <li>Reset - Click this to clear both the current ambient values, and the current speed reading, and start a new pass.</ul>

    <h3>Usage</h3>
    <p>As the magnets pass the phone what you are wanting to see is the sensor readings go smoothly up then down. (Or down then up depending on the polarity of the magnets.)</p>
    <p>The indicator beside the axis will start blank, then go to ▲ as the magnet approaches, then as it starts to pass will go to ▲▼, then finally blank again.  (Or ▼ then ▲▼ if the polarity is reversed.)</p>
    <p>If the indicator flickers it means the magnetic field is probably too weak for a clean read. Try moving the phone closer, or try a stronger magnet (or two magnets together)</p>

    <h3>Additional Information</h3>
    <p><a href="https://github.com/flash62au/MagneticScaleSpeedometer/blob/master/README.md">Readme</a>
    &nbsp &nbsp &nbsp &nbsp <a href="https://github.com/flash62au/MagneticScaleSpeedometer">Source code</a>
    &nbsp &nbsp &nbsp &nbsp <a href="https://github.com/flash62au/MagneticScaleSpeedometer/blob/master/copying.md">Licence</a></p>
    ]]></string>
    <string name="copyright_text">© 2025 Peter Akers. All rights reserved.  (Open Source, GNU)</string>
    <string name="about">About</string>

    <string name="warningNotAvailable">Magnetometer not available</string>

    <string name="versionLabel">Version: %s</string>

    <string name="sensorLabel">Magnetic Field Sensor Data:</string>
    <string name="axisTitleLabel">Current</string>
    <string name="ambientTitleLabel">Ambient ± Threshold</string>
    <string name="xAxisValueLabel">X: %.2f μT %s</string>
    <string name="yAxisValueLabel">Y: %.2f μT %s</string>
    <string name="zAxisValueLabel">Z: %.2f μT %s</string>

    <string name="ambientValueLabel">%s %.2f\u2014%.2f\u2014%.2f %s</string>

    <string name="resetButtonLabel">Reset</string>

    <string name="startTimeLabel">Start: %d ms (%.2f μT)</string>
    <string name="endTimeLabel">End: %d ms (%.2f μT)</string>
    <string name="runTimeLabel">Run Time: %d ms</string>

    <string name="startedNotice">Started</string>
    <string name="endedNotice">Ended</string>

    <string name="ratioLabel">Ratio: %f</string>
    <string name="speedLabel">Speed: %.2f k/h ( %.2f mph )</string>
    <string name="previousSpeedLabel">Previous: %.2f k/h ( %.2f mph )</string>

    <string name="distanceLabel">Distance between magnets (cm): </string>
    <string name="distanceDefaultValue">10</string>

    <string name="ignoreFirstResponseLabel">Ignore first (loco): </string>
    <string name="ignoreFirstResponseNotice">Ignoring first response (loco)</string>

    <string name="thresholdLabel">Threshold: </string>
    <string name="thresholdDefaultValue">20</string>

    <string name="ambientXLabel">Ambient X: </string>
    <string name="ambientYLabel">Y: </string>
    <string name="ambientZLabel">Z: </string>

    <string name="offsetLabel"> Get +: </string>
    <string name="offsetDefaultValue">40</string>

    <string name="scaleLabel">Scale: </string>
    <string name="axisLabel">Axis: </string>

    <string name="restartCountdownLabel">Restarting in %d sec</string>
    <string name="restartInLabel">Restart (sec): </string>
    <string name="notRestartingLabel">Not automatically restarting</string>

    <string name="logLabel">a: %s [ %s %.1f - %.1f %s ] : %s : %s</string>
    <string name="logSelectedScaleLabel">Selected scale: %s</string>
    <string name="logIgnoreFirstResponseLabel">1st</string>
    <string name="logIgnoreFirstResponseChangedLabel">Ignoring first response changed</string>
    <string name="logInitialisingLabel">Initialising</string>
    <string name="logReadyLabel">Ready</string>
    <string name="logAxisChangedLabel">Axis Changed</string>
    <string name="logRestartChangedLabel">Restart Changed</string>
    <string name="logThresholdChangedLabel">Threshold Changed</string>
    <string name="logThresholdZeroLabel">Threshold must be greater than zero (0)</string>
    <string name="logDistanceChangedLabel">Distance Changed</string>

    <string name="backPressTwiceToast">Press \'Back\' again to exit</string>

    <string name="menuAbout">About</string>
</resources>