<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:gravity="center_horizontal"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:logo="@drawable/toolbar_logo_inset"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:layout_margin="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/appIconImageView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_icon_description"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/versionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="@string/version_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/aboutDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/about_page_description"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/copyrightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/copyright_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
